--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "react": "^18.2.0"
     }
 }
