--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "prod": "npm run production",
         "production": "mix --production",
         "lint": "eslint --fix",
-        "pretty": "prettier --write ."
+        "pretty": "prettier --write .",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "axios": "^0.21",
@@ -20,7 +21,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "husky": "^8.0.1",
+        "husky": "^8.0.0",
         "laravel-mix": "^6.0.6",
         "lint-staged": "^13.0.3",
         "lodash": "^4.17.19",
